--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body{
 .identication-right{
     position: fixed;
     right: 0;
-    width: 8vh;
+    width: 7vh;
     background-color: var(--cor-color);
 }
 
@@ -97,6 +97,7 @@ body{
 
 #identication {
     transition: all 0.3s;
+    font-family: 'Tilt Warp', cursive;
 }
   
 
@@ -147,7 +148,7 @@ body{
 }
 
 section{
-    min-height: 95vh;
+    min-height: 97vh;
 }
 
 footer{
@@ -185,17 +186,6 @@ footer{
 .home-content p{
     font-size: 1.6rem;
 }
-
-#home .perfil{
-    background: linear-gradient(to top, rgba(0,0,0,0.3), transparent), url(../img/photo.jpg);
-    height: 50vh;
-    width: 50vh;
-    border-radius: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
 .home .info-person{
     margin-top: 6rem;
 }
@@ -281,29 +271,105 @@ footer{
     font-size: calc(3vw + 1.4rem); 
 }
 
+.ajax{
+    display: flex;
+    gap: 2rem;
+    font-size: calc(.6vw + 1.3rem);
+    justify-content: center;
+    align-items: center;
+}
+.ajax a{
+    opacity: 0.4;
+    transition: all 0.3s;
+    scale: 1;
+}
+
+.ajax a:hover{
+    opacity:0.9;
+    scale: 1.1;
+}
+
+.state{
+    color: var(--gra-color);
+}
+
+.content{
+   text-align: center;
+}
+
 #about{
     background-color: #222222;
     display: flex;
     justify-content: center;
     align-items: center;
-   
 }
 
-#about_content{
-    max-width: 60%;
-    padding: 30px;
+.about_content{
+    max-width: 40%;
     display: flex;
-    gap:20px;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: justify;
     flex-direction: column;
+    margin: 0 auto;
+    padding:2rem;
+    margin-top: 0.9rem;
+    border-radius: 20px;
+    background-color:var( --sobre-color);
 }
 
 
-#about img{
-    width: 30%;
-    border-radius: 5%;
+
+.card-content{
+    font-size: 1.2rem;
+    padding: 2rem;
+    width: 100%;
+    opacity: 0.7;
+    scale: 1;
+    transition: all 0.2s;
+    cursor: pointer;
+    background-color: rgb(0, 0, 0);
+    margin: 1.2rem;
+    border-radius: 15px;
+}
+
+.card-content:hover{
+    opacity: 1;
+    scale:1.1;
+}
+.card-content h2{
+    font-size: 1.7rem;
+}
+
+.card-box{
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.status{
+    color: var(--cor-color);
+}
+
+.about_content .img{
+    background-image: url(../img/photo.jpg);
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.name{
+    text-align: center;
+    color: var(--cor-color);
+}
+
+.download{
+    padding-top: 2rem;
+    text-align: center;
 }
 
 .title-section{
@@ -317,6 +383,7 @@ footer{
     padding: 0.5rem;
     display: inline;
     opacity: 0.3;
+    font-family: 'Tilt Warp', cursive;
 }
 
 #about h3{
@@ -325,13 +392,12 @@ footer{
 }
 
 .about_texts{
-    font-size: 1.5rem;
-    max-width: 100%; 
+    font-size: calc(.3vw + 1.2rem);
+    max-width: 100%;
 }
 
 .about_texts h4{
-    font-size: 2rem;
-    margin-bottom: 20px;
+    font-size: calc(.5vw + 1.2rem);
 }
 
 .container{
@@ -352,10 +418,10 @@ footer{
 
 .project_container{
     max-width: 60%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
     text-align: center;
 }
 
@@ -366,7 +432,7 @@ footer{
 
 #project .box{
     text-transform: capitalize;
-    flex-basis: calc(25% - 10px);
+    flex-basis: calc(24% - 8px);
     padding: 10px;
 }
 
@@ -468,6 +534,7 @@ footer .social-media{
 
 .btn{
     display: inline-block;
+    margin-top: 1rem;
     padding: 2rem;
     background-color: var(--main-color);
     border-radius: 0 50px 50px 0;
@@ -541,5 +608,161 @@ footer .social-media{
     margin: 0 auto; 
     letter-spacing: 1; 
     animation: typing 3s steps(30, end), blink-caret .75s step-end infinite;
+}
+
+@media (max-width: 610px) {
+    .project_container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about_content{
+        max-width: 60%;
+        text-align: justify;
+        gap: 20px;
+        padding-top: 10px;
+    }
+
+    .ajax{
+        gap: 1rem;
+        font-size: calc(.6vw + 1.5rem);
+        flex-direction: column;
+        width: 40%;
+        margin: 0 auto;
+    }
+    .ajax a{
+        margin:0 auto 0 0;
+    }
+
+    .about_texts{
+        font-size: calc(.2vw + 0.9rem);
+        max-width: 100%;
+        max-height: 20%; 
+    }
+
+    .btn{
+        padding: 1rem;
+        margin-top: -1rem;
+    }
+    .name{
+        margin-top: -1rem;
+        margin-bottom: 1rem;
+    }
+
+    .about_content .img{
+        width: 70px;
+        height: 70px;
+    }
+
+}
+
+
+@media (max-width: 300px) {
+    .project_container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about_content{
+        max-width: 60%;
+        text-align: justify;
+        gap: 20px;
+        padding-top: 10px;
+    }
+
+    .ajax{
+        gap: 1rem;
+        font-size: calc(.4vw + 1.3rem);
+        flex-direction: column;
+        width: 40%;
+        margin: 0 auto;
+    }
+    .ajax a{
+        margin:0 auto 0 0;
+    }
+
+    .about_texts{
+        font-size: calc(.4vw + 0.7rem);
+        max-width: 100%;
+        max-height: 20%; 
+    }
+
+    .btn{
+        padding: 1rem;
+        margin-top: -1rem;
+        font-size:0.8rem;
+    }
+    .name{
+        margin-top: -1rem;
+        margin-bottom: 1rem;
+    }
+
+    .about_content .img{
+        width: 50px;
+        height: 50px;
+    }
+    .download{
+        padding-top: 1rem;
+        text-align: center;
+    }
+}
+
+
+#teste
+
+.timeline {
+  width: 10%;
+  border: 1px solid red;
+  height: auto;
+
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.timeline-content {
+  background: #302f2f;
+  -webkit-box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
+          box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
+  border-radius: 5px;
+  color: white;
+  transition: 0.4s ease;
+  overflow-wrap: break-word !important;
+  margin: 1rem;
+  margin-bottom: 20px;
+  border-radius: 6px;
+  padding: 2rem;
+}
+
+.timeline-content h6{
+    font-size: 1.5rem;
   }
-  
+
+.timeline-component {
+  margin: 0px 20px 20px 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .timeline {
+    display: grid;
+    grid-template-columns: 1fr 2px 1fr;
+  }
+  .timeline-middle {
+    position: relative;
+    background-color: #0099ff;
+    width: 3px;
+    height: 100%;
+  }
+  .main-middle {
+    opacity: 0;
+  }
+  .timeline-circle {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    background-color: #0099ff;
+    border-radius: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
