--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 a{
     text-decoration: none;
     color: #f1f1f1;
+    cursor: pointer;
 }
 
 /* Variables */
@@ -60,13 +61,13 @@ body{
 .identication-left{
     position: fixed;
     left: 0;
-    width: 7vh;
+    width: 5vh;
 }
 
 .identication-right{
     position: fixed;
     right: 0;
-    width: 7vh;
+    width: 5vh;
     background-color: var(--cor-color);
 }
 
@@ -410,7 +411,7 @@ footer{
 
 .about_texts{
     font-size: calc(.3vw + 1.2rem);
-    max-width: 100%;
+    max-width: 30%;
 }
 
 .about_texts h4{
