--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body{
 /* Header */
 
 .identication-left, .identication-right{
+    border: 10px solid red;
     height: 100%;
     color: var(--white-color);
     background-color: var(--gra-color);
